<resources>
    <string name="app_name">TwoPlus</string>

    <string name="please_wait">Please wait</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_create">Create</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>

    <string name="sign_up">Sign Up with Email</string>
    <string name="sign_up_message">Enter your name, email, and password to sign-up with TwoPlus</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="john_smith">John Smith</string>

    <string name="sign_in">Sign In</string>
    <string name="et_what_do_you_want_to_do">What do you want to do?</string>
    <string name="et_time">Time:</string>
    <string name="et_date">Date:</string>
    <string name="et_location">Location:</string>
    <string name="text_friends">Friends going:</string>
    <string name="text_other">Other people going:</string>
    <string name="button_create_post">Create Post</string>
    <string name="new_thing">New Thing</string>
    <string name="new_post">New Post</string>
    <string name="post_title">Post Title:</string>
    <string name="post_description">Description</string>
    <string name="btn_join">JOIN</string>
    <string name="tv_posts">Posts</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="tv_likes">Likes</string>

    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_signout">Sign out</string>
</resources>