<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:enabled="true"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_new_post"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:enabled="true"
        android:title="@string/new_post" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_baseline_chat_24"
        android:enabled="true"
        android:title="@string/title_messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:enabled="true"
        android:title="@string/title_profile" />


</menu>